plugins {
    id 'java'
    id 'org.springframework.boot' version '2.5.3'
    id 'application'
}

group = 'edu.cornell'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    testCompileOnly 'org.projectlombok:lombok:1.18.30'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'

    implementation 'org.eclipse.jgit:org.eclipse.jgit:6.6.0.202305301015-r'
    implementation 'org.slf4j:slf4j-api:2.0.7'
    implementation 'org.slf4j:slf4j-simple:2.0.7'

    implementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
    implementation 'org.junit.platform:junit-platform-launcher:1.9.1'
    implementation 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
    implementation 'org.junit.jupiter:junit-jupiter:5.9.1'

    //implementation 'org.apache.logging.log4j:log4j:3.0.0-alpha1'
    implementation 'org.apache.kafka:kafka-clients:3.6.0'

    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

compileJava {
    options.compilerArgs << '-Xlint:all' << "-Werror"
}

application {
    mainClass = 'edu.cornell.Main'
}

test {
    useJUnitPlatform()

    exclude 'edu/cornell/testenv/testclasses/**'
}
